fix overflow of carousel

--- a/components/Carousel/Carousel.module.scss
+++ b/components/Carousel/Carousel.module.scss
@@ -1,8 +1,9 @@
 .Carousel {
-  width: fit-content;
   display: flex;
   flex-direction: column;
   overflow-y: none;
+  width: 100%;
+  position: relative;
 
   .carousel-controls {
     width: 100%;
@@ -22,8 +23,16 @@
     flex-direction: row;
     align-items: flex-start;
     flex-wrap: nowrap;
-    overflow-x: scroll;
-    gap: 1.5rem !important;
+    gap: 1rem;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    scroll-snap-type: x proximity;
+    -webkit-overflow-scrolling: touch;
+    white-space: nowrap;
+    scrollbar-width: none; // Hide scrollbar in Firefox
+    margin-left: -125px;
+    margin-right: -125px;
+    padding: 0 125px;
   }
 }
 
