--- a/components/FeaturedArtistCard/FeaturedArtistCard.module.scss
+++ b/components/FeaturedArtistCard/FeaturedArtistCard.module.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box; /* Ensures padding and borders are included in the width */
   margin-bottom: 2rem;
   margin-top: 1rem;
+  margin: 1rem 0.75rem 2rem 0rem;
   z-index: 10;
 
   img,
